--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
-USER=mirfees
+# .env
+USER=mirfeesmegadev
 USER_ID=1000
 
+PROJECT_NAME=test
 PREFIX_CONTAINER_NAME=nginx-php8.3
 
+###> wp ###
+SITE_URL=http://example.loc
+ADMIN_USER=admin
+ADMIN_PASSWORD=password
+ADMIN_EMAIL=example@gmail.com
+###< wp ###
 
 ### db ###
 DB_ROOT_PASSWORD=root
@@ -12,15 +20,15 @@ DB_PASSWORD=root
 ##########
 
 ###> nginx ###
-NGINX_PORT=80
+NGINX_PORT=9955
 ###< nginx ###
 
 ###> phpmyadmin ###
-PHPMYADMIN_PORT=8080
+PHPMYADMIN_PORT=9959
 ###< phpmyadmin ###
 
 ###> mailhog ###
-MAILHOG_PORT=8081
+MAILHOG_PORT=9995
 ###< mailhog ###
 
 ###> redis ###
@@ -33,7 +41,7 @@ BD_ADMIN_PORT=8084
 ################
 
 ###> redis ###
-REDIS_PORT=6379
+REDIS_PORT=9999
 REDIS_PASS=JhSJNULTobUf8yZEAJ3d8rfnIm
 ###< redis ###
 
